--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aura",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "dependencies": {
@@ -20,9 +20,12 @@
     "node-sass": "^4.9.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
+    "webpack-auto-inject-version": "^1.1.0",
     "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.3"
   },
