--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "index.js",
   "dependencies": {
     "dragscroll": "0.0.8",
-    "tone": "^13.1.5",
+    "tone": "^13.2.0",
     "webmidi": "^2.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -26,7 +28,7 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-auto-inject-version": "^1.1.0",
-    "webpack-cli": "^2.1.2",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.3"
   },
   "scripts": {
