--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --host 0.0.0.0",
+    "testp": "webpack-dev-server --mode production",
     "build": "webpack --mode production"
   },
   "keywords": [],
